create sensible python environment; add basic bot functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,7 @@
 [tool.poetry]
 package-mode = false
-name = "binary-options-bot"
+name = "binary_options_bot"
 version = "0.1.0"
-description = ""
-authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -11,8 +9,8 @@ python = "^3.12"
 sqlalchemy = "^2.0"
 python-telegram-bot = "^21.5"
 python-dotenv = "^1.0"
+bcrypt = "^4.2.0"
 
 [build-system]
-requires = ["poetry-core>=1.8"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
