--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-sqlalchemy = "^2.0"
 python-telegram-bot = "^21.5"
 python-dotenv = "^1.0"
-bcrypt = "^4.2.0"
+django = "^5.1.1"
 
 [build-system]
 requires = ["poetry-core"]
